--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>    
-    <meta charset="utf-8" />       
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <meta name="theme-color" content="#000000" />
-   
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />    
-    <title>Halisson Skalee</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>    
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#000000" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>Halisson Skalee</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
